<?xml version="1.0"?>

    <resources>
    
    <string name="game2_name">Stack</string>

    <string name="game_rules_title">Rules:</string>

    <string name="app_name">BrainSTEM</string>

    <string name="music">Music</string>

    <string name="music_description">Music is a rhythm game that challenges those with arthritis to move their joints and improve reflexes. All music is licensed under CC BY-NC-SA 3.0 or is in the public domain.</string>

    <string name="music_song1">Star-Spangled Banner</string>
    <string name="music_song2">Take Me Out to the Ball Game</string>
    <string name="music_song3">Für Elise</string>
    <string name="music_song4">Heart and Soul</string>

    <string name="music_song1_author" translatable="false">Francis Scott Key</string>
    <string name="music_song2_author">Jack Norworth and Albert Von Tilzer</string>
    <string name="music_song3_author">Ludwig van Beethoven</string>
    <string name="music_song4_author">Hoagy Carmichael</string>

    <string name="music_song1_copyright">Adapted from Bryce Poindexter (musescore.org)</string>
    <string name="music_song2_copyright">Public Domain</string>
    <string name="music_song3_copyright">Public Domain</string>
    <string name="music_song4_copyright">Adapted from Toma\'Nimation (musescore.org)</string>

    <string name="music_copyright_description">All soundtracks are in the public domain or licensed under CC BY-NC-SA 3.0.</string>

    <string name="music_score" formatted="false">Score: %d</string>

    <string name="play">Play</string>

    <string name="play2">Play!</string>

    <string name="summation_description">Summation allows users to have a holistic challenge. The spontaneity of the mini-game allows for overall mental stimulation.</string>

    <string name="summation">Σ (Summation)</string>

    <string name="tile_description">Tile is a card-flipping game that works to allow the brain to make connections as well as challenging the memory loss of Alzheimer’s and similar disorders.</string>

    <string name="tile">Tile</string>

    <string name="stack_description">Stack is a rule-based block game. It stimulates the brain, improving cognitive functioning for daily activity as well as combatting the symptoms of dementia.</string>

    <string name="stack">Stack</string>

    <string name="home">Home</string>

    <string name="pause">Pause</string>

    <string name="answer4">answer4</string>

    <string name="answer1">answer1</string>

    <string name="answer2">answer2</string>

    <string name="answer3">answer3</string>

    <string name="tile_settings">Tile Settings:</string>

    <string name="choose_images">Choose images</string>

    <string name="pairs_of_cards">Pairs of Cards:</string>

    <string name="tile_allows_you_to_select_pairs_of_cards_from_your_phone_s_images_and_works_to_improve_one_s_memory_increase_the_difficulty_by_increasing_the_number_of_cards_and_trying_to_beat_your_past_time">Tile allows you to select pairs of cards from your phone\'s images and works to improve one\'s memory. Increase the difficulty by increasing the number of cards and trying to beat your past time!</string>

    <string name="use_default_cards">Use default cards</string>

    <string name="choose_image">Choose image</string>

    <string name="rule_prefix">New Rules:</string>

    <string name="stack_progress">Next Level!</string>
    <string name="q1">On which parking space is the car parked?</string>
    <string name="q2">A and C but not B</string>
    <string name="q3">Where is I?</string>
    <string name="q4">Choose the answer closest to the correct answer</string>
    <string name="q5">Click on the biggest answer</string>
    <string name="q6">Run out of time</string>
    <string name="q1a">78</string>
    <string name="q1b">89</string>
    <string name="q1c">87</string>
    <string name="q1d">97</string>
    <string name="q2a">A: A</string>
    <string name="q2b">B: B, A, and D</string>
    <string name="q2c">C: C and D</string>
    <string name="q2d">D: D and A</string>
    <string name="here">Here</string>
    <string name="there">There</string>
    <string name="hair">Hair</string>
    <string name="anywhere">Anywhere</string>
    <string name="answer">the answer</string>
    <string name="big">Big</string>
    <string name="done">Done</string>
    <string name="run">Run</string>
    <string name="what">What?</string>
    <string name="and">and</string>
    <string name="lose">Game Over! \n Your Statistics:</string>
    <string name="returnHome">Tap Screen to Return to Main Menu</string>
    <string name="rules">Number of Rules:</string>
    <string name="placed">Blocks Placed:</string>
    <string name="broken">Rules Broken:</string>
    <string name="stackDesc">TODO: Describe Stack in as few words as possible while explaining how to play the game.</string>
    <string name="stackTellRules">Tell me the rules</string>
    <string name="stackGuessRules">Let me guess</string>
    <string name="stackStartLevel">Start on level:</string>
    <string name="tileDesc">TODO: Describe Tile in as few words as possible while explaining how to play the game.</string>
    <string name="tileCount">Number of Pairs:</string>
    <string name="tileChangeImages">Change Images</string>
    <string name="sumDesc">TODO: Describe Summation in as few words as possible while explaining how to play the game.</string>
    <string name="musicDesc">TODO: Describe Music in as few words as possible while explaining how to play the game.</string>
    <string name="tileException">Please set your cards.</string>

</resources>