<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"><![CDATA[
    tools:context="bbhs.appbowl2017.SummationGame">

    ]]>

    <Button
        android:id="@+id/playButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/play2"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/summation"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/summation_description"
        android:textSize="20sp" />
</RelativeLayout>
