<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/game2_base">

    <TextView
        android:id="@+id/game2_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:clickable="false"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/game2_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@android:color/black"
        style="@android:style/TextAppearance.Large"
        app:layout_heightPercent="15%"
        app:layout_widthPercent="50%" />

    <FrameLayout
        android:id="@+id/game2_playButton"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_below="@+id/game2_title"
        android:layout_centerHorizontal="true"
        app:layout_heightPercent="20%"
        app:layout_widthPercent="90%">

        <ImageButton
            android:id="@+id/game2_gameButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            app:srcCompat="@mipmap/button" />

        <TextView
            android:id="@+id/game2_playText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:fontFamily="sans-serif"
            android:text="@string/play"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/black"
            tools:text="Play" />

    </FrameLayout>

    <TextView
        android:id="@+id/stacktitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game2_playButton"
        android:layout_centerHorizontal="true"
        android:text="@string/stack_description"
        style="@android:style/TextAppearance.Medium"
        app:layout_widthPercent="90%"/>

</android.support.percent.PercentRelativeLayout>